<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">umeng_example</string>
    <string name="umeng_share">分享</string>
    <string name="umeng_auth">授权</string>
    <string name="umeng_deleauth">清除对应授权</string>
    <string name="umeng_shake">摇一摇</string>
    <string name="umeng_comment">评论相关</string>
    <string name="umeng_openshare">打开分享面板</string>
    <string name="umeng_openshare_custom">打开自定义分享面板</string>
    <string name="umeng_sharebutton_custom">自定义分享按钮</string>
    <string name="umeng_share1">默认分享面板可编辑分享页</string>
    <string name="umeng_share2">自定义分享面板可编辑分享页</string>
    <string name="umeng_share3">单平台直接分享</string>
    <string name="umeng_share4">多平台直接分享</string>
    <string name="umeng_share5">默认分享面板可编辑分享页多平台</string>

    <string name="umeng_shakeshotscreen">摇一摇截屏</string>
    <string name="umeng_shakeshare">摇一摇分享</string>
    <string name="umeng_registershake">注册摇一摇</string>

    <string name="umeng_comment1">用户信息</string>
    <string name="umeng_comment2">本地登陆</string>
    <string name="umeng_comment3">本地授权</string>
    <string name="umeng_comment4">好友功能</string>
    <string name="umeng_comment5">评论功能</string>
    <string name="umeng_comment6">注销</string>
    <string name="umeng_comment7">解决事例</string>

    <string name="umeng_nativequery">本地登陆信息查询</string>
    <string name="umeng_loginsina">登陆新浪</string>
    <string name="umeng_logoutsina">登出新浪</string>
    <string name="umeng_loginqq">登陆QQ</string>
    <string name="umeng_logoutqq">登出QQ</string>
    <string name="umeng_loginqzone">登陆QQ空间</string>
    <string name="umeng_logoutzone">登出QQ空间</string>
    <string name="umeng_customlogin">自定义登陆</string>

    <string name="umeng_addfriend">添加好友</string>
    <string name="umeng_getfriendlist">获取好友列表</string>

    <string name="umeng_commentmodular">评论模块</string>
    <string name="umeng_getcommentlist">获取评论列表</string>
    <string name="umeng_sendcomment">发出评论</string>

    <string name="action_settings">设置</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="share_by_weixin">微信分享</string>
    <string name="share_by_qq">QQ分享</string>
    <string name="share_by_yixin">易信分享</string>
    <string name="shake_share">注册摇一摇截图（分享）</string>
    <string name="shake_openshare">注册摇一摇（打开分享面板）</string>
    <string name="shake_scrshot">注册摇一摇（截图）</string>
    <string name="take_scrshot">直接截图</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="quit">退出</string>
    <string name="video_start_time">00:00</string>
    <string name="goto_video">摇一摇视频截图Activity</string>
    <string name="goto_game">游戏Activity</string>
    <string name="goto_common">普通Activity</string>
    <string name="video">VideoActivity</string>
    <string name="game">GameActivity</string>
    <string name="common">CommonActivity</string>
    <string name="back">返回</string>
    <string name="goto_facebook">添加Facebook分享</string>
    <string name="fb_login">Facebook登录</string>
    <string name="fb_logout">Facebook注销</string>
    <string name="fb_share">Facebook分享</string>
    <string name="laiwang_share">来往分享</string>
    <string name="instagram_share">Instagram分享</string>
    <string name="pocket_share">Pocket分享</string>
    <string name="linkedin_share">LinkedIn分享</string>
    <string name="foursquare_share">FourSquare分享</string>
    <string name="ynote_share">有道云笔记分享</string>
    <string name="evernote_share">印象笔记分享</string>
    <string name="pinterest_share">Pinterest分享</string>
    <string name="custom_platform_share">自定义平台分享</string>
    <string name="login_sina">登录（新浪微博）</string>
    <string name="logout_sina">注销登录（新浪微博）</string>
    <string name="login_qq">登录（QQ）</string>
    <string name="logout_qq">注销登录（QQ）</string>
    <string name="login_qzone">登录（QQ空间）</string>
    <string name="logout_qzone">注销登录（QQ空间）</string>
    <string name="whatsapp_share">whatsapp分享</string>
    <string name="line_share">line分享</string>
    <string name="tumblr_share">tumblr分享</string>
    <string name="kakao_share">Kakao Talk分享</string>
    <string name="flickr_share">flickr分享</string>
    <string name="fb_app_id">567261760019884</string>
    <string name="photo_post">Photo Post</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating Facebook status at </string>
    <string name="ok">OK</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="facebook_app_id">487692214752558</string>
    <string name="perm">需要权限:</string>





    <string name="app_names">ESports2</string>
    <string name="news">资讯</string>
    <string name="message">消息</string>
    <string name="games">赛事</string>
    <string name="found">发现</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="games_mission">做任务</string>
    <string name="pantaoyuan">蟠桃园</string>
    <string name="games_changes">兑换记录</string>
    <string name="games_more"><![CDATA[更多>]]></string>
    <string name="my_games">我的游戏</string>
    <string name="my_teams">我的战队</string>
    <string name="my_macth">我的赛事</string>
    <string name="yaoqingma">邀请码</string>
    <string name="tucao">吐槽</string>
    <string name="active_role">活跃角色</string>
    <string name="click_head_image">点击头像登录</string>
    <string name="my_recode">我的回复</string>
    <string name="tv_match_fragment">赛事</string>

    <string-array name="logins">
        <item>登录</item>
        <item>注册</item>
    </string-array>
    <string-array name="match_selcet_fragment">
        <item>全部游戏</item>
        <item>炉石传说</item>
        <item>英雄联盟</item>
        <item>守望先锋</item>
    </string-array>
    <string name="invitation_msg">*每邀请成功一个好友，好友将获得100蟠桃</string>
    <string name="invitation_msg_one">*补充填写你好友的邀请码，只能填写一次!</string>
    <string name="invitation_msg_two">*填写邀请码，您将获得10蟠桃</string>
    <string name="news_item_title">度娘说标题要长</string>
    <string name="newsDetail">新闻资讯</string>
    <string-array name="spinner_context">
        <item>功能建议</item>
        <item>产品BUG</item>
        <item>其他</item>
    </string-array>
    <string name="comment">评论区</string>
    <string name="hotcomment">热门评论</string>
    <string name="newcomment">更新评论</string>
    <string name="commenthint">写点什么吧</string>
</resources>
