<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/head_image_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:src="@mipmap/nav_setting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/head_image_pic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            app:civ_border_color="#fff"
            app:civ_border_width="2dp"
            android:src="@mipmap/moren_header" />

        <TextView
            android:id="@+id/tv_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/click_head_image"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/head_tv_quest"
            style="@style/head_layout_textview"
            android:text="@string/games_mission"
            android:drawableTop="@mipmap/nav_quest"
             />

        <TextView
            android:id="@+id/head_tv_pantaoyuan"
            style="@style/head_layout_textview"
            android:drawableTop="@mipmap/nav_pantaoyuan"
            android:text="@string/pantaoyuan"
            />

        <TextView
            android:id="@+id/head_tv_record"
            android:drawableTop="@mipmap/nav_record"
            style="@style/head_layout_textview"
            android:text="@string/games_changes"
             />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#999" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/active_role"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/head_tv_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/games_more"
        android:textColor="#f00" />
</LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#999" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/head_tv_mygame"
            style="@style/head_layout_tv"
            android:drawableTop="@mipmap/nav_mygame"
            android:text="@string/my_games"/>
        <TextView
            android:id="@+id/head_tv_war_team"
            style="@style/head_layout_tv"
            android:drawableTop="@mipmap/nav_war_team"
            android:text="@string/my_teams"/>
        <TextView
            android:id="@+id/head_tv_mine_march"
            style="@style/head_layout_tv"
            android:drawableTop="@mipmap/nav_mine_march"
            android:text="@string/my_macth"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/head_tv_replay"
            style="@style/head_layout_tv"
            android:drawableTop="@mipmap/nav_replay"
            android:text="@string/my_recode"/>
        <TextView
            android:id="@+id/head_tv_yaoqingma"
            style="@style/head_layout_tv"
            android:drawableTop="@mipmap/nav_yaoqingma"
            android:text="@string/yaoqingma"/>
        <TextView
            android:id="@+id/head_tv_tucao"
            style="@style/head_layout_tv"
            android:drawableTop="@mipmap/nav_tucao"
            android:text="@string/tucao"/>
    </LinearLayout>
</LinearLayout>