<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mypc.esports.ui.InvitationActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#000"
        android:padding="15dp">

        <ImageView
            android:id="@+id/on_back_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/icon_arrow_left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="我的邀请码"
            android:textColor="#FDD101"
            android:textSize="18sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <ImageView
            android:id="@+id/iv_invitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/yaoqingma_bg"/>

        <TextView
            android:id="@+id/tv_invitation_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_invitation"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="102862"
            android:textColor="#e0e007"
            android:textSize="68sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_invitation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/invitation_msg"
            android:textSize="16sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invitation_msg_one"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invitation_msg_two"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <EditText
                    android:id="@+id/et_invitaion_code"
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:background="#323232"
                    android:gravity="center"
                    android:hint="邀请码"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColorHint="#fff"
                    android:textSize="32sp"/>

                <Button
                    android:id="@+id/btn_invitation_commit"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:background="#00BEC3"
                    android:text="保存"
                    android:textColor="#fff"
                    android:textSize="32sp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
